# askar

./: .gitignore  Cargo.toml  GOVERNANCE.md  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pythonpublish.yml  scorecard.yml
askar-crypto/: Cargo.toml  README.md
askar-crypto/benches/: enc.rs  kdf.rs
askar-crypto/src/: error.rs  lib.rs  macros.rs  sign.rs
askar-crypto/src/alg/: any.rs  bls.rs  chacha20.rs  ed25519.rs  k256.rs  mod.rs  p256.rs  p384.rs  x25519.rs
askar-crypto/src/alg/aes/: mod.rs
askar-crypto/src/backend/: mod.rs
askar-crypto/src/buffer/: array.rs  secret.rs  writer.rs
askar-crypto/src/jwk/: encode.rs
askar-crypto/src/kdf/: argon2.rs
askar-storage/: Cargo.toml  README.md
askar-storage/src/: any.rs  entry.rs  error.rs  options.rs
askar-storage/src/backend/: db_utils.rs  mod.rs
askar-storage/src/protect/: mod.rs  pass_key.rs
askar-storage/src/wql/: query.rs  tags.rs
askar-storage/tests/: backends.rs
askar-storage/tests/utils/: mod.rs
docs/: storage.md
include/: libaries_askar.h
src/: store.rs
src/ffi/: kdf.rs  key.rs  migration.rs  mod.rs  result_list.rs  store.rs  tags.rs
src/kms/: enc.rs  entry.rs  local_key.rs
wrappers/javascript/: package.json  pnpm-lock.yaml
wrappers/python/: README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
wrappers/python/aries_askar/: __init__.py  kdf.py  store.py  version.py
wrappers/python/aries_askar/bindings/: __init__.py  lib.py
wrappers/python/tests/: test_kdf.py  test_store.py
(+6 files in other folders)
